<resources>
    <string name="app_name">Movie Dicoding</string>
    <string name="judul_film">Judul film</string>
    <string name="cari">Cari</string>
    <string name="dimana">Dimana ya filmnya?</string>
    <string name="minus">-</string>
    <string name="please_wait">Mohon menunggu..</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="release_date">Tanggal Rilis</string>
    <string name="popularity">Nilai Popularitas</string>
    <string name="language">Kode Bahasa</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="joko_priyono">Joko Priyono</string>
    <string-array name="logo_animasi">
        <item>
            M7139 1967c-89 -32 -164 -84 -243 -167 -109 -116 -135 -199 -78 -252 78 -75 154 -54 211 59 24 49 76 94 150 130 72 36 204 44 283 18 70 -22 132 -67 173 -123 30 -41 35 -55 35 -105l0 -57 -38 25c-64 42 -149 66 -257 72 -172 9 -292 -37 -426 -164 -110 -106 -164 -217 -176 -365 -13 -162 42 -303 166 -428 196 -199 475 -235 700 -91 119 77 233 237 261 367 7 33 10 174 8 395l-3 344 -27 55c-18 37 -57 85 -111 138 -67 65 -102 90 -173 124l-89 43 -150 3c-137 2 -156 0 -216 -21zm324 -653c57 -19 124 -78 168 -146 34 -52 34 -54 34 -168 0 -107 -2 -118 -27 -161 -32 -54 -90 -109 -150 -141 -37 -20 -58 -23 -148 -23 -98 0 -109 2 -158 29 -59 33 -97 72 -139 143 -26 44 -28 56 -28 153 0 91 3 111 23 150 40 76 109 137 192 166 49 18 177 17 233 -2z
        </item>
        <item>
            M6730 1015l0 -995 605 0 605 0 0 995 0 995 -605 0 -605 0 0 -995zm748 950c149 -35 320 -163 380 -284l27 -56 3 -344c3 -379 1 -405 -54 -518 -62 -129 -175 -230 -312 -280 -364 -132 -759 169 -729 555 11 144 66 261 167 355 75 72 158 118 250 142 134 35 341 3 434 -68 18 -14 36 -23 40 -20 3 4 6 36 6 72 0 61 -3 70 -38 116 -49 65 -122 119 -189 140 -82 26 -212 18 -285 -18 -75 -37 -142 -98 -175 -160 -43 -80 -103 -96 -168 -46 -32 26 -34 82 -4 142 33 65 163 187 240 224 124 61 276 79 407 48z
        </item>
        <item>
            M7230 1336c-83 -30 -170 -106 -212 -186 -20 -39 -23 -59 -23 -150 0 -98 2 -108 29 -154 42 -71 97 -128 158 -162 49 -27 61 -29 158 -29 91 0 111 3 149 23 59 32 137 106 169 162 25 42 27 53 27 160 0 114 0 116 -33 168 -47 71 -131 147 -188 166 -57 19 -184 21 -234 2z
        </item>
        <item>
            M484 1566C377 1541 251 1464 168 1372 123 1322 56 1184 41 1112 16 990 35 850 91 737 127 666 239 546 312 499c26 -17 80 -43 120 -57 63 -22 89 -26 188 -26 125 1 201 19 281 69 21 14 41 25 44 25 4 0 5 -94 4 -209 -2 -199 -1 -211 20 -244 25 -41 60 -52 126 -42 32 4 51 15 70 36l25 31 0 509c0 488 -1 512 -21 572 -59 178 -207 329 -380 387 -82 28 -221 35 -305 16zm282 -269c59 -30 123 -98 156 -165 19 -38 23 -63 23 -137 0 -78 -4 -97 -28 -147 -31 -64 -90 -121 -163 -158 -42 -21 -62 -25 -144 -25 -79 0 -103 4 -142 23 -65 32 -122 92 -160 169 -28 56 -32 75 -31 142 1 122 47 208 146 274 72 48 107 57 207 53 68 -2 95 -8 136 -29z
        </item>
        <item>
            M2180 1570c-178 -23 -354 -150 -434 -312 -114 -234 -74 -478 108 -661 214 -213 513 -233 755 -51 32 24 64 57 71 74 17 41 5 94 -30 133 -40 45 -97 45 -166 0 -102 -68 -132 -78 -229 -78 -75 0 -98 4 -139 24 -200 99 -251 379 -97 529 65 63 134 95 217 100 88 6 149 -13 228 -68 48 -34 65 -40 107 -40 42 0 55 5 79 28 39 39 49 95 25 139 -42 76 -210 165 -345 182 -47 6 -87 10 -90 10 -3 -1 -30 -5 -60 -9z
        </item>
        <item>
            M3175 1569c-84 -17 -190 -76 -270 -151 -118 -110 -172 -225 -182 -383 -10 -164 38 -293 155 -417 74 -78 131 -117 227 -155 62 -24 83 -27 190 -27 136 0 190 15 302 86 125 79 242 249 261 378l8 55 13 -68c21 -104 69 -194 152 -281 80 -85 152 -133 249 -167 53 -18 86 -22 180 -22 125 0 207 20 282 69 21 13 40 24 43 24 3 0 5 -95 5 -211 -2 -228 1 -239 55 -275 41 -27 122 -13 158 26l27 30 0 510c0 491 -1 513 -21 573 -60 180 -204 326 -380 388 -83 29 -255 33 -339 7 -141 -44 -291 -171 -353 -298 -20 -41 -43 -102 -52 -134 -17 -69 -25 -81 -25 -39 0 53 -38 158 -80 221 -108 161 -279 260 -465 267 -49 2 -112 0 -140 -6zm256 -266c62 -28 125 -92 158 -162 37 -79 38 -203 2 -276 -32 -63 -92 -124 -156 -155 -42 -21 -64 -25 -145 -25 -84 0 -101 3 -146 27 -56 30 -99 73 -140 144 -22 37 -28 63 -32 123 -2 42 1 94 7 116 25 95 115 188 211 220 62 20 181 14 241 -12zm1175 -6c59 -30 123 -98 156 -165 32 -65 33 -206 2 -273 -30 -63 -76 -112 -147 -156 -61 -37 -64 -38 -162 -38 -84 0 -107 4 -147 23 -65 32 -122 92 -159 168 -28 56 -31 73 -31 145 0 70 4 89 32 145 32 65 82 115 150 149 59 30 82 35 170 31 68 -2 95 -8 136 -29z
        </item>
        <item>
            M1388 1543c-15 -16 -32 -41 -37 -56 -15 -38 -15 -928 -1 -979 6 -20 25 -49 42 -63 28 -24 39 -27 82 -22 41 4 55 11 83 41l33 36 0 489c0 294 -4 500 -10 515 -14 37 -66 66 -121 66 -36 0 -50 -5 -71 -27z
        </item>
        <item>
            M5227 1542c-15 -16 -32 -44 -37 -63 -14 -49 -13 -908 1 -965 7 -28 23 -54 42 -70 27 -23 38 -25 81 -21 41 4 55 11 83 41l33 36 0 489c0 294 -4 500 -10 515 -14 37 -66 66 -121 66 -37 0 -50 -5 -72 -28z
        </item>
        <item>
            M5648 1543c-15 -16 -32 -41 -37 -56 -14 -37 -15 -918 -1 -966 5 -19 22 -47 37 -63 22 -23 35 -28 75 -28 39 0 54 6 83 31 19 17 35 37 35 45 0 10 15 6 53 -15 90 -51 155 -64 293 -59 120 4 124 5 206 45 149 74 254 192 305 342 21 63 22 82 23 377l0 312 -35 31c-40 35 -96 42 -144 17 -56 -30 -56 -26 -61 -345l-5 -296 -33 -67c-18 -37 -47 -79 -65 -94 -97 -83 -241 -104 -349 -51 -62 30 -115 83 -150 149 -22 41 -23 54 -28 343 -4 217 -9 306 -18 322 -18 32 -64 53 -115 53 -34 0 -49 -6 -69 -27z
        </item>
        <item>
            M1408 385c-14 -8 -36 -35 -48 -60 -19 -38 -20 -50 -11 -77 29 -81 99 -115 169 -79 53 27 72 56 72 107 0 89 -103 151 -182 109z
        </item>
        <item>
            M5248 385c-14 -8 -35 -34 -47 -58 -25 -51 -17 -94 26 -139 37 -38 80 -45 131 -19 53 27 72 56 72 107 0 89 -103 151 -182 109z
        </item>
    </string-array>
</resources>
